# rl

./: .gitignore  LICENSE  README.md  game.opam
boards/: board.txt
src/: .merlin  action.ml  action.mli  board.ml  board.mli  dune  game.ml  game.mli  jbuild  policy.ml  policy.mli  state.ml  state.mli
test-game/: board.txt  board2.txt  board_small.txt  colors.py  game.py  lil_board.txt
